--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,7 +63,23 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/Cookie.png
+    - asset/logo.png
+    - asset/full.png
+    - asset/text.png
+    - asset/dunkinbanner.jpeg
+    - asset/dunkinbaner.jpg
+    - asset/dunkinlogo.png
+    - asset/lacremelogo.png
+    - asset/b2g.jpg
+    - asset/bgburger.jpg
+    - asset/butch.jpg
+    - asset/claire.jpg
+    - asset/darngoodburger.jpg
+    - asset/eatsntreats.jpg
+    - asset/explosiveburgers.jpg
+    - asset/goodgrilledburgers.jpg
+    - asset/johannas.jpg
+    - asset/maxrestaurant.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -75,10 +92,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-SemiBold.ttf
+        - asset: fonts/Poppins-Medium.ttf                                                      
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
