--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   animated_splash_screen: ^1.3.0
+  flutter_credit_card: ^4.0.1
 
 dev_dependencies:
   flutter_test:
