--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ flutter:
     - asset/explosiveburgerbanner.jpg
     - asset/burgerstationbanner.jpg
     - asset/burgerstation.jpg
+    - asset/handsome.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
